[package]
name = "akv"
version = "0.1.0"
authors = ["boya <yang.wilby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
bytes = "1"
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
tokio-util = {version = "0.6.7", features = ["codec"]}
prost="0.8.0"
anyhow = "1.0.43"
futures ="0.3.16"
dashmap="4.0.2"
[build-dependencies]
prost-build = "0.8.0"